--- a/src/plugins/strapi-plugin-ckeditor/package.json
+++ b/src/plugins/strapi-plugin-ckeditor/package.json
@@ -39,6 +39,7 @@
     "@ckeditor/ckeditor5-highlight": "^36.0.0",
     "@ckeditor/ckeditor5-horizontal-line": "^36.0.0",
     "@ckeditor/ckeditor5-html-embed": "^36.0.0",
+    "@ckeditor/ckeditor5-html-support": "^36.0.0",
     "@ckeditor/ckeditor5-image": "^36.0.0",
     "@ckeditor/ckeditor5-indent": "^36.0.0",
     "@ckeditor/ckeditor5-language": "^36.0.0",
@@ -51,7 +52,9 @@
     "@ckeditor/ckeditor5-paste-from-office": "^36.0.0",
     "@ckeditor/ckeditor5-react": "^5.0.6",
     "@ckeditor/ckeditor5-remove-format": "^36.0.0",
+    "@ckeditor/ckeditor5-source-editing": "^36.0.0",
     "@ckeditor/ckeditor5-special-characters": "^36.0.0",
+    "@ckeditor/ckeditor5-style": "^36.0.0",
     "@ckeditor/ckeditor5-table": "^36.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^36.0.0",
     "@ckeditor/ckeditor5-upload": "^36.0.0",
